Bug 1607444 - Only collect the self hosting zone once at runtime initialization r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D60153